# starting-ragchatbot-codebase

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  frontend-changes.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
