[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "openai>=2.0.0",
    "sentence-transformers",
    "transformers<5",
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.0",
    "torch>=2.2.0",
    "numpy<2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "api: API endpoint tests",
]
